Stub for datalog

--- a/papers/vyser/common/characteristic.tex
+++ b/papers/vyser/common/characteristic.tex
@@ -2,6 +2,8 @@
 {\actuality}
 Логическое программирование давно привлекает внимание исследователей тем, что оно предоставляет возможность не реализовывать конкретный алгоритм непосредственно, а вместо этого с некоторой степенью декларативности описывать условие решаемой задачи. Роль алгоритма в данном случае выполняет встроенная в систему логического программирования процедура поиска решения.
 
+Recent years have seen a resurgence of interest from theresearch and industry community in the Datalog languageand  its  syntactic  extensions.   Datalog  is  a  recursive  querylanguage that extends relational algebra with recursion, andcan be used to express a wide spectrum of modern data man-agement tasks, such as data integration [7, 13], declarativenetworking [14], graph analysis [20, 21] and program anal-ysis [27].  Datalog offers a simple and declarative interfaceto the developer, while at the same time allowing powerfuloptimizations that can speed up and scale out evaluation\footnote{\url{https://arxiv.org/pdf/1812.03975.pdf}}.
+
 Программы на логическом языке записываются в виде реляций (relations), которые моделируют математические отношения (relations). 
 Математические отношения являются подмножествами декартова произведения, в то время как алгоритмические реляции моделируют математические отношения путём генерации элементов подмножества один за другим. Побочным эффектом использования реляций является возможность описания только счетных отношений, а также то, что реляция может зависнуть в процессе вычисления следующего элемента отношения.
 
@@ -11,6 +13,7 @@
 превращаются в (n+1)-местные реляции, путём добавления дополнительного аргумента для результата функции. Эти реляции можно использовать в прямую сторону, конкретизировав аргументы и подставив вместо результата свободную переменную, т.е. как функции. Также является возможным запускать их ``в обратную сторону'', конкретизировав результат и некоторые аргументы, по сути подбирая входные данные, на которых конкретный алгоритм, записанный на логическом языке программирования, выдаст ожидаемый результат. Таким образом, если перед программистом на обычном языке программирования стоит задача обращения некоторого алгоритма, то он вынужден написать новый алгоритм, который непосредственно этим и занимается. Если же пользоваться логическим программированием, то можно попробовать обойтись одной реляцией, правильно подобрав её аргументы.
 
 Обладание свойством декларативности полезно для логических программ. Оно заключается в том, что программист не реализует непосредственно алгоритм как последовательность действий, от него требуется только корректное описание задачи на языке логического программирование. В декларативных описаниях программ результат не зависит от того как именно и в каком порядке описывается предметная область. Это снимает некоторый груз ответственности с программиста.
+
 
 Процедура поиска, встроенная в систему логического программирования может осуществлять поиск решения руководствуюсь различными стратегиями. Самым распространенным является поиск в глубину, который, если находит ответ, показывает хорошую производительность. Однако он обладает свойством неполноты: алгоритм может бесконечно искать ответ в некоторой ветви дерева поиска решения и в итоге не зайти в другие ветви, где решение находится быстрее.
  Таким образом логическое программирование, использующее поиск в глубину не является декларативным в общем случае. 
