Notes about matching size

--- a/papers/matching_size.tex
+++ b/papers/matching_size.tex
@@ -38,6 +38,52 @@
 \usepackage{amsmath}
 
 \begin{document}
+\section{}
+Рассматриваем fully abstract типы с рекурсией. Конструкторы -- $C_1\dots C_n$. Количество рекурсивных аргументов в i-м конструкторе -- $a_i$, рекурсивных аргументов во всех конструкторах -- $\sum_{i=1}^{n} a_i$. Таким образом нерекурсивных аргументов как бы нет и новых жителей они не дают. Все типы записываются как полином
+\[
+t(x) = c_0 + c_1*t(x) + \dots + c_n*t^n(x) + ...
+\]
+Здесь степени -- это количество рекурсивных аргументов конструктора, $c_i$ -- количество конструкторов с $i$ рекурсивными аргументами
+
+$L(h)$ -- количество жителей высоты $h$, $S(h)$ -- количество высоты $\leq h$ 
+
+\section{Числа пеано/списки -- линейно жителей}
+$$ p(x) = 1 + p(x) $$
+
+$$ L(h+1) = L(h) $$
+  
+$$ S(h) = c\cdot h $$
+
+\section{Числа пеано/списки с двумя разными succ -- экспонента}
+$$ p(x) = 1 + p(x) +  p(x) = 1 + 2*p(x)$$
+
+$$ L(h+1) = 2*L(h) $$
+  
+$$ S(h) = 1 + 2 + 2^2 +2^3 +\dots +2^{h-1} = O(2^h) $$
+
+Такое получается когда больше одного рекурсивного аргумента во всех конструкторах
+
+\section{Бинарные деревья -- башенка экспонент}
+$$ p(x) = 1 + (p(x))^2$$
+
+$$ L(h+1) = L(h)^2 +  L(h)*S(h-1)*2 \sim L(h)^2$$
+
+$$ ln (L(h+1)) \sim 2 * ln(L(h)) \sim O(2^h)$$
+  
+$$S(h+1)\sim O(2^{2^h}) $$
+
+\section{В общем виде}
+Если есть конструктор, где $m$ рекурсивных (использующих определяемый тип) аргументов, 
+
+$$ p(x) = 1 +\dots + (p(x))^m$$
+
+$$ L(h+1) = L(h)^m + \dots \sim O(L(h)^m) $$
+
+$$ ln (L(h+1)) \sim m * ln(L(h)) \sim O(m^h)$$
+  
+$$S(h+1)\sim O(m^{m^h}) $$
+\begin{comment}
+
 
 \section{Попробую в общем виде}
 Рассматриваем fully abstract типы с рекурсией. Конструкторы -- $C_1\dots C_n$. Количество рекурсивных аргументов в i-м конструкторе -- $a_i$, рекурсивных аргументов во всех конструкторах -- $\sum_{i=1}^{n} a_i$. Таким образом нерекурсивных аргументов как бы нет и новых жителей они не дают. Все типы записываются как полином
@@ -49,7 +95,7 @@ t(x) = c_0 + c_1*t(x) + \dots + c_n*t^n(x) + ...
 
 $L(h) = \begin{cases}
 O(1) & h=1\\
-\sum{a_i} * L(h-1),&h>1
+\sum{a_i} * S(h-1),&h>1
 \end{cases} = O(c^h)$
 
 Наибольшее влияние оказывает наибольшая степень (где больше всего рекурсивных аргументов)
@@ -74,6 +120,8 @@ $L(h) = 2$, $S(h) = 2*h$
 \item Деревья: $t(x) = 1 + t^2(x)$\\
 $L(h) = \begin{cases}
 1, & h=1\\
+1, & h=2\\
+3, & h=3\\
 2*L(h-1),&h>1
 \end{cases} = 2^{h-1}$
 
@@ -86,5 +134,5 @@ $S(h) = \sum_{i=1}^{h} L(i) =\sum_{i=1}^{h} 2^{i} =2(2^h - 1)$
 
 \end{itemize}
 
-
+\end{comment}
 \end{document}
