WIP on projects

--- a/fp2020/projects.asciidoc
+++ b/fp2020/projects.asciidoc
@@ -13,6 +13,8 @@
 
 Такой же документ за прошлый год link:../fp2019/projects.html[здесь].
 
+TODO: задачи на допуск к допуску на вход.
+
 
 [[reasonml]]
 Про ReScript/OCaml
@@ -77,7 +79,7 @@ let foo = e =>
 С чего начинать: Вот https://github.com/rescript-lang/syntax[тут]  можно найти парсер, написанный рекурсивным спуском. Можно смотреть как он ведет себя на программах, где синтаксис двух языков перемешан.
 
 
-
+[[rescript-combinators]]
 Парсер ReScript, с использованием подхода парсер-комбинаторов
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
@@ -91,9 +93,11 @@ let foo = e =>
 
 С чего начинать:
 
-- посмотреть на библиотеки парсер-комбинаторов;
-- разобраться с особенностями-недостатками похода: левая рекурсия, longest match first.
-- начать переписывать парсер на основе кодовой базы https://github.com/rescript-lang/syntax[ReScript]
+. посмотреть на библиотеки парсер-комбинаторов;
+.. https://github.com/inhabitedtype/angstrom[Angstrom]
+.. https://github.com/dboulytchev/ostap/[Ostap] и т.п.
+. разобраться с особенностями-недостатками похода: левая рекурсия, longest match first.
+. начать переписывать парсер на основе кодовой базы https://github.com/rescript-lang/syntax[ReScript]
 
 Требования к обучающемуся:
 
@@ -102,7 +106,7 @@ let foo = e =>
 
 
 
-
+[[ocaml-ide]]
 Про интеграцию OCaml с IDE
 --------------------------
 
@@ -120,7 +124,7 @@ TODO: видео с Spb Rust Meetup 2019 от matklad.
 - https://dl.acm.org/doi/pdf/10.1109/IWoR.2019.00013[RoToR, IWoR 2019]
 
 
-
+[[semantich-highlighting]]
 Семантическая подсветка (и/или) идентация
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
@@ -149,6 +153,7 @@ TODO: видео с Spb Rust Meetup 2019 от matklad.
 - знакомство с технологией разработки/расширения соответствующего редактора (для VS Code это язык TypeScript);
 - отсутствие страха окунуться в большие проекты.
 
+[[ide-camlp5]]
 Поддержка синтаксических расширений на основе Camlp5
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
@@ -185,6 +190,7 @@ TODO: видео с Spb Rust Meetup 2019 от matklad.
 
 
 
+[[miniKanren]]
 miniKanren
 ----------
 
@@ -210,6 +216,7 @@ TODO: добавить мотивирующее видео от Matthew Might'а
 
 // Заранее отвечаю на вопрос с попыткой развести срач. Python.
 
+[[mk-memoization]]
 Про мемоизацию
 ~~~~~~~~~~~~~~
 
@@ -258,7 +265,7 @@ TODO: добавить мотивирующее видео от Matthew Might'а
 Pandoc
 ------
 
-Сегодня СПбГУ засталвляет преподов создавать документ "РПУД" (Рабочаяя программа учебной деятельности) в DOCX формате.
+Сегодня СПбГУ засталвляет преподов создавать документ "РПУД" (Рабочая программа учебной деятельности) в DOCX формате.
 Редактировать такое в Word -- это боль, поэтому преподы хотели бы использовать LaTeX для этого. Поэтому, надо научиться преобразовывать документы из LaTex в DOCX.
 
 Проект https://github.com/jgm/pandoc[Pandoc] (написанный на Haskell) существует как раз для этого. Он уже умеет преобразоывать
@@ -268,7 +275,7 @@ Pandoc
 
 В общем виде преобразовывать произвольный LaTeX нереально, так как там есть даже встроенный язык программирования. Необходимо поддержать только те фичи, которые нужны для преобразования документов РПУД.
 
-*Уровень*: курсовая; в процессе могут возникнуть задачи, выделяемые в бакалаврскую, но заранее сказать нельзя.
+*Уровень*: курсовая.
 
 
 [[incremental]]
@@ -291,7 +298,7 @@ Pandoc
 
 *Уровень*: курсовая
 
-В планах лежит попытка это опубликовать на тематическм воркшопе GRAPHS NDA (ну или на нашем родном SEIM).
+В планах лежит попытка это опубликовать на тематическм воркшопе GRADES NDA (ну или на нашем родном SEIM).
 
 // Руководители mailto:rsdpisuy@gmail.com[Семен Григорьев] и mailto:Dmitrii.Kosarev@protonmail.ch[Дмитрий Косарев]
 
