--- a/fp2020/projects.asciidoc
+++ b/fp2020/projects.asciidoc
@@ -83,11 +83,16 @@ let foo = e =>
 Парсер ReScript, с использованием подхода парсер-комбинаторов
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-На данный момент парсер ReasonML написан методом рекурсивного спуска. Скорее всего от парсер-комбинаторов отказались из-за опасений недостаточной производительности (хотя видео Джонатана Блоу, создателя Brain, я не смотрел). Хочется
+На данный момент парсер ReasonML написан методом рекурсивного спуска. Скорее всего от парсер-комбинаторов отказались из-за опасений недостаточной производительности (хотя видео Джонатана Блоу, создателя Braid, я не смотрел). Хочется
 
-- подтвердить или опровергнуть, что парсер-комбинаторы торомозят.
-- проверять, что с ними писать более удобно не нужно (потому, что это вроде как очевидно).
-- предъявить техники написания парсер-комбинаторов, которые повышают производительность итогового парсера.
+. Подтвердить или опровергнуть, что парсер-комбинаторы торомозят.
+. Проверять, что с ними писать более удобно не нужно (потому, что это вроде как очевидно).
+. Предъявить техники написания парсер-комбинаторов, которые повышают производительность итогового парсера. Например
+.. В таких-то случаях нам нужна мемоизация, а в таких-то она не поможет
+.. Тогда-то стандартный подход лучше как-то видоизменить
+.. Здесь лучше рекурсию сменить на итерацию
+.. А тут аппликативные парсеры работают шустрее, чем монадические.
+.. Ну или "мы тупо пишем с парсер-комбинаторами, код в 10 раз короче, работает всего лишь на 10% медленнее. Победа"
 
 *Уровень*: курсовая; возможно, последующий апгрейд до бакалаврской.
 
