--- a/fp2020/projects.asciidoc
+++ b/fp2020/projects.asciidoc
@@ -308,6 +308,25 @@ Pandoc
 // Руководители mailto:rsdpisuy@gmail.com[Семен Григорьев] и mailto:Dmitrii.Kosarev@protonmail.ch[Дмитрий Косарев]
 
 
+[[ic3]]
+Про Eldarica и IC3
+------------------
+
+Как-то один человек попросил меня придумать тему про Scala, но ничего лучше, чем это у меня не получилось.
+
+https://github.com/uuverifiers/eldarica[Eldarica] --- это SAT/SMT солвер написанный на Scala. Идея работы заключается в добавлении туда чего-нибудь. В код я особо не лазал, в чем Эльдарика особенно хороша я не знаю, по хорошему надо бы написать письмо Рюммеру и поинтересоваться куда он хочет её развивать.
+
+Предлагается в каком-то виде прикрутить алгоритм IC3 к Эльдарике. Вот какие-то https://www.cs.tau.ac.il/~msagiv/courses/asv/IC3.pdf[слайды] про алгоритм, умные научные статьи сможете найти сами. Алгоритм мудрёный, там замешана мат. логика, так что пока разберётесь, то придется пострадать.
+
+. Как минимум,  должен быть реализован рабочий алгоритм на Scala.
+. По хорошему, он ещё должен интегрироваться с Эльдарикой, использовать наработки, которые там уже сделаны и т.п.
+. Алгоритм должен получиться максимально аккуратно реализован и хорошо читаем. Основная цель работы: полшучить реализацию, с помощью которой можно максимально быстро объяснить новым людям (базово знакомым с мат. логикой) "потроха".
+. В идеале алгоритм должен параметризовываться модулем, который
+.. либо ничего интересного не делает и на производительность не влияет
+.. либо логгирует трассировку промежуточных состояний (графически отображает, что происходит) для  облегчения понимания того, что происходит.
+. Совсем идеальный вариант: алгоритм должен работать не сильно медленнее, чем аналогичная реализация на С++.
+
+
 
 
 // Про верификацию функциональных программ с SMT солверами
