--- a/fp2020/projects.asciidoc
+++ b/fp2020/projects.asciidoc
@@ -271,7 +271,7 @@ Pandoc
 ------
 
 Сегодня СПбГУ засталвляет преподов создавать документ "РПУД" (Рабочая программа учебной деятельности) в DOCX формате.
-Редактировать такое в Word -- это боль, поэтому преподы хотели бы использовать LaTeX для этого. Поэтому, надо научиться преобразовывать документы из LaTex в DOCX.
+Редактировать такое в Word -- это боль, поэтому преподы хотели бы использовать LaTeX для этого (или какой-либо другой текстовый формат, где хорошо работает версионирование и облегчено комментирование изменений). Поэтому, надо научиться преобразовывать документы из LaTex в DOCX.
 
 Проект https://github.com/jgm/pandoc[Pandoc] (написанный на Haskell) существует как раз для этого. Он уже умеет преобразоывать
 заголовки и прочий кириллический текст в DOCХ (и в большое количество других форматов документов), но, по-видимому, поддержка таблиц и тутульной страницы не реализована никак.
