--- a/fp2020/projects.asciidoc
+++ b/fp2020/projects.asciidoc
@@ -65,7 +65,7 @@ let foo = e =>
 
 ----
 
-
+[[rescript-recovery]]
 Парсер синтаксиса ReScript, с восстановлением от ошибок
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
