--- a/crazy.asciidoc
+++ b/crazy.asciidoc
@@ -26,6 +26,13 @@ Actor model for OCaml
 
 
 
+Функторы ужас-ужас
+------------------
+
+Народ говорит раз и два, что функторы не очень. Надо придумать/найти какой-то супер подход, который решит проблемы.
+
+
+
 ifdef::backend-docbook[]
 [index]
 Example Index
