WIP on projects

--- a/fp2020/projects.asciidoc
+++ b/fp2020/projects.asciidoc
@@ -9,7 +9,7 @@
 :email:  Dmitrii.Kosarev@pm.me
 
 
-*Темы* преимущественно про функциональное программирование. Во всех темах de facto консультирует mailto:Dmitrii.Kosarev@protonmail.ch[Дмитрий Косарев], а mailto:rsdpisuy@gmail.com[Семен Григорьев] руководит de jure, а de facto читает тексты и презентации.
+*Темы* преимущественно про функциональное программирование. Во всех темах de facto консультирует mailto:Dmitrii.Kosarev@protonmail.ch[Дмитрий Косарев] (записываться на тему у него), а mailto:rsdpisuy@gmail.com[Семен Григорьев] руководит de jure, а de facto читает тексты и презентации.
 
 Такой же документ за прошлый год link:../fp2019/projects.html[здесь].
 
@@ -79,6 +79,7 @@ let foo = e =>
 С чего начинать: Вот https://github.com/rescript-lang/syntax[тут]  можно найти парсер, написанный рекурсивным спуском. Можно смотреть как он ведет себя на программах, где синтаксис двух языков перемешан.
 
 
+
 [[rescript-combinators]]
 Парсер ReScript, с использованием подхода парсер-комбинаторов
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -94,7 +95,7 @@ let foo = e =>
 .. А тут аппликативные парсеры работают шустрее, чем монадические.
 .. Ну или "мы тупо пишем с парсер-комбинаторами, код в 10 раз короче, работает всего лишь на 10% медленнее. Победа"
 
-*Уровень*: курсовая; возможно, последующий апгрейд до бакалаврской.
+*Уровень*: курсовая/ВКР в зависимости от поставленных задач.
 
 С чего начинать:
 
@@ -109,7 +110,25 @@ let foo = e =>
 - желательно знакомство с ФП языками (OCaml, Haskell, Scala 3);
 - желателен общий кругозор в области синтаксического анализа (LL, LR, GLR, GLL, Packrat, Meerkat).
 
++++ <details><summary> +++
+[.underline]#*Подробнее (спойлер)*#
++++ </summary><div> +++
 
+Тип работы: эксперимент.
+
+В результате **не должно** казаться так, что это работа на выходные про "закодить парсер какого-то подмножества ReScript".
+
+. В OCaml/ReScript существует много библиотек парсер-комбинаторов. Студент должен выбрать одну, быть способен обосновать выбор и кратко сказать в чем преимущества и недостатки остальных реализаций парсер-комбинаторов.
+. В используемой библиотеке парсер-комбинаторов может чего-то не хватать, например, может отсутствовать поддержка мемоизации парсер-функций высшего порядка. Если студент доделает и улучшит библиотеку чем-то таким, то это будет плюсом для оценки работы в целом.
+. Если в процессе работы будет поддержан весь ReScript, т.е. можно будет заменить парсер в компиляторе ReScript и собрать некоторое количество пакетов с ним, то это тоже будет плюсом.
+. Если новый парсер будет
+  .. занимать меньше строк
+  .. не сильно проседлать по производительности
+  .. поддерживать всё, что умеет предыдущий парсер (фичи языка, восстановление от ошибок)
++
+то это тоже будет существенным плюсом работы.
+
++++ </div></details> +++
 
 [[ocaml-ide]]
 Про интеграцию OCaml с IDE
