WIP on project topics

--- a/crazy.asciidoc
+++ b/crazy.asciidoc
@@ -22,7 +22,17 @@ Actor model for OCaml
 Допилить QtQml, заменив Js на OCaml
 -----------------------------------
 
-Больше статической типизации худа не сделают. Хотя надо подождат и посмотреть, что за статически типизированный QML планируют релизнуть в Qt 6
+Больше статической типизации худа не сделают. Хотя надо подождать и посмотреть, что за статически типизированный QML планируют релизнуть в Qt 6
+
+
+[[oneml]]
+Доделать реализацию 1ML, чтобы она по фичам начала догонять OCaml
+-----------------------------------------------------------------
+
+Говорят, что там сделали нормальную реализацию модулей. Надо посмотреть, и, если там всё действительно хорошо, то доделать
+
+- или кодогенерацию для интерпретатора https://people.mpi-sws.org/~rossberg/1ml/[1ML]
+- или транслятор из 1ML во внутреннее бестиповое представление OCaml
 
 
 
