--- a/fp2020/projects.asciidoc
+++ b/fp2020/projects.asciidoc
@@ -9,7 +9,7 @@
 :email:  Dmitrii.Kosarev@pm.me
 
 
-*Темы* преимущественно про функциональное программирование. Во всех темах de facto консультирует mailto:Dmitrii.Kosarev@protonmail.ch[Дмитрий Косарев] (записываться на тему у него), а mailto:rsdpisuy@gmail.com[Семен Григорьев] руководит de jure, а de facto читает тексты и презентации.
+*Темы* преимущественно про функциональное программирование. Во всех темах de facto консультирует mailto:Dmitrii.Kosarev@protonmail.ch[Дмитрий Косарев] (записываться на тему у него, добавляйте в копию mailto:dmitry.kosarev@jetbrains.com[запасной email] ибо случаются казусы), а mailto:rsdpisuy@gmail.com[Семен Григорьев] руководит de jure, а de facto читает тексты и презентации.
 
 Такой же документ за прошлый год link:../fp2019/projects.html[здесь].
 
@@ -162,11 +162,17 @@ TODO: видео с Spb Rust Meetup 2019 от matklad.
 
 Что надо сделать:
 
-- расширить реализацию https://github.com/ocaml/ocaml-lsp[OCaml Language Server] поддержкой раскрашивания синтаксиса
+- в реализации https://github.com/ocaml/ocaml-lsp[OCaml Language Server] сделать/доделать поддержку раскрашивания синтаксиса и форматирования с отступами.
 - сделать возможность описывать правила подстветки кода библиотекам на OCaml
 - доделать редактор кода, который умеет общаться с LSP сервером (например, https://marketplace.visualstudio.com/items?itemName=ocamllabs.ocaml-platform[VS Code]), чтобы он научился показывать то, что прислал сервер.
 
-Замечание: настраиваемые авто-отступы можно выделить в отдельную похожую тему.
+
+Текущее состояние дел:
+
+- ocaml-lsp-server вызывает стороннее приложение для форматирования кода (ссылки https://github.com/ocaml/ocaml-lsp/blob/master/ocaml-lsp-server/src/fmt.ml[раз] и https://github.com/ocaml/ocaml-lsp/blob/master/ocaml-lsp-server/src/ocaml_lsp_server.ml#L631[два], надеюсь номера строк не уедут со времененем)
+- для подсветки синтаксиса в ocaml-lsp-server реализованы только https://github.com/ocaml/ocaml-lsp/blob/master/ocaml-lsp-server/src/ocaml_lsp_server.ml#L540[заглушки].
+
+Замечание: настраиваемое форматирование можно выделить в одну тему, а подсветку -- в другую похожую тему.
 
 *Уровень*: курсовая; возможен последующий апгрейд до бакалаврской.
 
@@ -201,6 +207,8 @@ TODO: видео с Spb Rust Meetup 2019 от matklad.
 - научить merlin понимать информацию о подключенных синтаксических расширениях Camlp5
 - изменить логику так, чтобы в присутствии Camlp5 сначала применялся парсер Camlp5, который на выходе даст AST компилятора OCaml, уже после это применять расширения синтаксиса на основе PPX.
 - уже после этого запускать поиск рефакторингов и т.п.
+
+Начинать эксперименты стоит c https://github.com/rgrinberg/merlin/blob/3746f6bdf4f7be99f71f2d42a127b3d64b8127d0/src/kernel/mpipeline.ml[этого файла]. Например, в зависимости от переменной окружения и/иди имени файла надо запускать синтаксический анализ с помощью camlp5, а не то, что там сейчас есть.
 
 *Уровень*: курсовая; возможен последующий апгрейд до бакалаврской.
 
