--- a/fp2020/projects.asciidoc
+++ b/fp2020/projects.asciidoc
@@ -84,14 +84,15 @@ let foo = e =>
 Парсер ReScript, с использованием подхода парсер-комбинаторов
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-На данный момент парсер ReasonML написан методом рекурсивного спуска. Скорее всего от парсер-комбинаторов отказались из-за опасений недостаточной производительности (хотя видео Джонатана Блоу, создателя Braid, я не смотрел). Хочется
+На данный момент парсер ReasonML https://github.com/rescript-lang/syntax[написан] методом рекурсивного спуска. Скорее всего от парсер-комбинаторов отказались из-за опасений недостаточной производительности (хотя видео Джонатана Блоу, создателя Braid, я не смотрел). Хочется:
 
 . Подтвердить или опровергнуть, что парсер-комбинаторы торомозят.
 . Проверять, что с ними писать более удобно не нужно (потому, что это вроде как очевидно).
-. Предъявить техники написания парсер-комбинаторов, которые повышают производительность итогового парсера. Например
-.. В таких-то случаях нам нужна мемоизация, а в таких-то она не поможет
-.. Тогда-то стандартный подход лучше как-то видоизменить
-.. Здесь лучше рекурсию сменить на итерацию
+. Скорее всего, придется проверять, что с парсер-комбинаторами сложнее делать восстановление от ошибок.
+. Предъявить техники написания парсер-комбинаторов, которые повышают производительность итогового парсера. Например,
+.. В таких-то случаях нам нужна мемоизация, а в таких-то она не поможет.
+.. Тогда-то стандартный подход лучше как-то видоизменить.
+.. Здесь лучше рекурсию сменить на итерацию.
 .. А тут аппликативные парсеры работают шустрее, чем монадические.
 .. Ну или "мы тупо пишем с парсер-комбинаторами, код в 10 раз короче, работает всего лишь на 10% медленнее. Победа"
 
@@ -102,8 +103,10 @@ let foo = e =>
 . посмотреть на библиотеки парсер-комбинаторов;
 .. https://github.com/inhabitedtype/angstrom[Angstrom]
 .. https://github.com/dboulytchev/ostap/[Ostap] и т.п.
+.. Или какие-то библиотеки, задизайненные специально под ReScript (найдёте сами).
 . разобраться с особенностями-недостатками похода: левая рекурсия, longest match first.
 . начать переписывать парсер на основе кодовой базы https://github.com/rescript-lang/syntax[ReScript]
+. готовить текст курсовой записки для зимнего зачета
 
 Требования к обучающемуся:
 
